# rxflow-pharmacy-assistant

./: .dockerignore  .env.dev  .env.example  .env.production.example  .gitignore  404.html  CNAME  DOCSTRING_ENHANCEMENT_REPORT.md  Dockerfile  GITIGNORE_SUMMARY.md  MAKEFILE_GUIDE.md  Makefile  PHASE1_SUMMARY.md  Qventus_Project_Implementation_Guide.md  README.md  STREAMLIT_GUIDE.md  TYPE_SAFETY_FINAL_REPORT.md  TYPE_SAFETY_REPORT.md  app.py  build-and-push.sh  docker-compose.yml  docstring_analyzer.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-docs.txt  run_integration_tests.py  sitemap.xml  test_confirmations.py  test_conversation_chains.py  test_conversation_manager.py  test_enhanced_flow.py  test_escalation_scenarios.py  test_flow_diagram.py  test_intelligent_conversation.py  test_llm_basic.py  test_matching.py  test_medication_detection_fix.py  test_omeprazole_fix.py  (+9 more)
.github/workflows/: deploy-docs.yml
COMPREHENSIVE_DOCUMENTATION/: index.html
ENHANCED_UI_UX_SUMMARY/: index.html
MODULAR_ARCHITECTURE/: index.html
about/: index.html
api/conversation-manager/: index.html
api/patient-tools/: index.html
api/pharmacy-tools/: index.html
data/: STEP_COMPLETION_TEMPLATE.md  drug_policies.txt  mock_drugs.json  mock_insurance.json  mock_patients.json  mock_pharmacies.json  submitted_orders.json
deployment/: index.html
deployment/deployment-checklist/: index.html
deployment/docker-deployment/: index.html
deployment/docker-isolation-report/: index.html
developer-guide/: index.html
docs/: API_REFERENCE.md  CNAME  COMPREHENSIVE_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  ENHANCED_UI_UX_SUMMARY.md  MODULAR_ARCHITECTURE.md  PROJECT_RETROSPECTIVE.md  README.md  STEP10_COMPLETION_SUMMARY.md  STEP6_COMPLETION_SUMMARY.md  STEP7_COMPLETION_SUMMARY.md  STEP8_COMPLETION_SUMMARY.md  STEP9_COMPLETION_SUMMARY.md  STEPS1-5_RETROSPECTIVE_SUMMARY.md  STEP_COMPLETION_TEMPLATE.md  USER_GUIDE.md  about.md  escalation_scenarios_guide.md  flow_diagram.md  implementation_prompt.md  index.md  optimization_scalability.md  step1_completion_summary.md  step2_completion_summary.md  step3_completion_summary.md  step4_completion_summary.md  step5_completion_summary.md  v2_enhancement_summary.md
docs/api/: conversation-manager.md  (+2 more)
logs/: README.md
rxflow/: __init__.py  llm.py
search/: search_index.json
tests/: integration_test_detailed_report.json  test_escalation_system.py  test_integration.py  test_unit_components.py
ui/: __init__.py  message_processor.py  session_manager.py
user-guide/: index.html
(+54 files in other folders)
